--- a/css/cart.css
+++ b/css/cart.css
@@ -14,22 +14,21 @@
     font-style: normal;
 }
 
-/* Reset marges en padding */
+/* Reset margins and padding */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-/* Basis styling voor de body */
+/* General styling body */
 body {
     font-family: 'Nexa', sans-serif;
-    color: #1d3d70; /* Consistente tekstkleur */;
+    color: #1d3d70;
 }
 
-/* Topbar Styling */
 .top-bar {
-    background-color: #FECD3E; /* Gele achtergrond */
+    background-color: #FECD3E;
     color: white;
     text-align: center;
     padding: 10px 0;
@@ -37,7 +36,6 @@ body {
     width: 100%;
 }
 
-/* Navbar Styling */
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -48,18 +46,16 @@ body {
     width: 100%;
 }
 
-/* Logo styling */
 .logo {
     display: flex;
     align-items: center;
 }
 
 .logo img {
-    max-height: 60px; /* Logo hoogte */
+    max-height: 60px; 
     width: auto;
 }
 
-/* Iconen */
 .icon {
     display: flex;
     align-items: center;
@@ -71,7 +67,7 @@ body {
     cursor: pointer;
 }
 
-/* Navigatielinks */
+/* Navigation links */
 .nav-center {
     list-style: none;
     display: flex;
@@ -88,14 +84,13 @@ body {
     text-decoration: underline;
 }
 
-/* Rechterkant van de navbar */
+/* Right side of the navbar */
 .nav-right {
     display: flex;
     align-items: center;
     gap: 20px;
 }
 
-/* Contactknop */
 .contact-button {
     border: 2px solid #1C3D77;
     padding: 8px 16px;
@@ -112,6 +107,7 @@ body {
     color: white;
 }
 
+/* Cart with count */
 .cart-counter {
     position: absolute;
     top: 55px;
@@ -134,7 +130,6 @@ body {
     padding-bottom: 8em;
 }
 
-/* Pagina titel */
 .page-title {
     font-weight: bold;
     color: #1d3d70;
@@ -177,14 +172,17 @@ td:nth-child(2), td:nth-child(3) {
     color: white;  
 }
 
+/* Create radius on left side of upper row */
 .first-cell {
     border-radius: 10px 0 0 10px;
 }
 
+/* Create radius on right side of upper row */
 .last-cell {
     border-radius: 0 10px 10px 0;
 }
 
+/* Center quantity inputs, not column title */
 tr:not(.upper-row) td:nth-child(4) {
     display: flex;
     justify-content: center;
@@ -192,6 +190,7 @@ tr:not(.upper-row) td:nth-child(4) {
     height: 160px;
 }
 
+/* Apply black text color to fifth column only */
 tr:not(.upper-row) td:nth-child(5) {
     color: black;
 }
@@ -212,7 +211,7 @@ td > input {
 .cart-totals {
     grid-row-start: 2;
     grid-column-start: 3;
-    display: flex;
+    display: flex; /* Allows for centering content */
     flex-direction: column;
     align-items: center;
     background-color: #1d3d70;
@@ -237,4 +236,3 @@ td > input {
     margin-bottom: 4rem;
     font-size: 20px;
 }
-
