--- a/css/checkout.css
+++ b/css/checkout.css
@@ -14,22 +14,21 @@
     font-style: normal;
 }
 
-/* Reset marges en padding */
+/* Reset margins and padding */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-/* Basis styling voor de body */
+/* General styling body */
 body {
     font-family: 'Nexa', sans-serif;
-    color: #1d3d70; /* Consistente tekstkleur */;
+    color: #1d3d70;
 }
 
-/* Topbar Styling */
 .top-bar {
-    background-color: #FECD3E; /* Gele achtergrond */
+    background-color: #FECD3E;
     color: white;
     text-align: center;
     padding: 10px 0;
@@ -37,7 +36,6 @@ body {
     width: 100%;
 }
 
-/* Navbar Styling */
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -48,18 +46,16 @@ body {
     width: 100%;
 }
 
-/* Logo styling */
 .logo {
     display: flex;
     align-items: center;
 }
 
 .logo img {
-    max-height: 60px; /* Logo hoogte */
+    max-height: 60px;
     width: auto;
 }
 
-/* Iconen */
 .icon {
     display: flex;
     align-items: center;
@@ -71,7 +67,7 @@ body {
     cursor: pointer;
 }
 
-/* Navigatielinks */
+/* Navigation links */
 .nav-center {
     list-style: none;
     display: flex;
@@ -88,14 +84,13 @@ body {
     text-decoration: underline;
 }
 
-/* Rechterkant van de navbar */
+/* Right side of the navbar */
 .nav-right {
     display: flex;
     align-items: center;
     gap: 20px;
 }
 
-/* Contactknop */
 .contact-button {
     border: 2px solid #1C3D77;
     padding: 8px 16px;
@@ -112,6 +107,7 @@ body {
     color: white;
 }
 
+/* Cart with count */
 .cart-counter {
     position: absolute;
     top: 55px;
@@ -134,7 +130,6 @@ body {
     padding-bottom: 40px;
 }
 
-/* Pagina titel */
 .page-title {
     font-weight: bold;
     color: #1d3d70;
@@ -157,14 +152,16 @@ body {
 
 .form-group {
     display: flex;
-    flex-direction: column; /* Zet label boven input */
-    margin-bottom: 25px; /* Witruimte tussen onderdelen */
+    flex-direction: column; /* Puts label above input */
+    margin-bottom: 25px; /* Creates space between form groups */
 }
 
+/* Extra margin used to compensate for input without label */
 .extra-margin {
     margin-bottom: 50px;
 }
 
+/* Inputs first and last name put next to each other */
 .form-row {
     display: flex;
     gap: 15px;
@@ -175,7 +172,7 @@ body {
 }
 
 .form-group > label {
-    margin-bottom: 20px; /* Witruimte tussen label en input */
+    margin-bottom: 20px; 
     color: #1d3d70;
     font-weight: bold;
 }
@@ -196,12 +193,13 @@ body {
     color: #9F9F9F;
 }
 
+/* Hidden submit button used for validation */
 #submit-button {
     display: none;
 }
 
 .summary {
-    display: flex;
+    display: flex; /* Allows for centering content */
     flex-direction: column;
     background-color: #1d3d70;
     border-radius: 10px;
@@ -243,7 +241,7 @@ hr {
 
 .radio-section > label, input {
     margin-right: 10px;
-    vertical-align: middle;
+    vertical-align: middle; /* Aligns label with input */
     font-weight: bold;
     accent-color: #FECD3E;
 }
